# local-zero

./: .gitignore  LICENSE  README.md  SPEC.md  package-lock.json  package.json
.claude/: lemon-check.py  settings.json
.github/workflows/: ci.yml  ingest-probe.yml
docs/decisions/: v0.1-f1-spike.md  v0.1-f8-redesign.md  v0.1-model-selection.md  v0.1-open-questions.md
prototypes/embed-probe/: Cargo.toml  README.md
prototypes/embed-probe/src/: main.rs
prototypes/ingest-probe/: .gitignore  Cargo.toml  README.md
prototypes/ingest-probe/fixtures/: _gen.py
prototypes/ingest-probe/src/: main.rs
prototypes/mic-test/: README.md
prototypes/mic-test/src/: App.tsx
prototypes/vram-probe/: Cargo.toml  README.md
prototypes/vram-probe/src/: main.rs
scripts/: dev.ps1
src/: App.css  App.tsx  Chat.tsx  EvalEditor.tsx  ExportPanel.tsx  Settings.tsx  lemonade.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  embed.rs  evals.rs  export.rs  ingest.rs  lib.rs  main.rs  retrieval.rs  settings.rs
