[package]
name = "local-zero"
version = "0.0.1"
description = "Build your first local AI app from zero. Tauri-based desktop companion that uses Lemonade SDK as a local LLM backend."
authors = ["Facundo Ibarzabal <facundoibarzabal@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/facundoib/local-zero"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_zero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
pdf-extract = "0.7"
tiktoken-rs = "0.6"
ureq = { version = "2.10", features = ["json"] }

